Implementing getAll posts functionality on /posts endpoint. Updated API spec to correspond to this.
