# docs/openapi.yml
@@ -275,13 +275,13 @@ paths:
               properties:
                 name:
                   type: string
-                  example: "Software developement"
+                  example: 'Software developement'
                 startDate:
                   type: string
-                  example: "2024-11-01"
+                  example: '2024-11-01'
                 endDate:
                   type: string
-                  example: "2024-11-31"
+                  example: '2024-11-31'
       responses:
         '201':
           description: success
@@ -308,7 +308,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/403Error'
-                
+
     get:
       tags:
         - cohort
@@ -478,7 +478,7 @@ paths:
       description: Allows a logged-in user to create a comment.
       operationId: createComment
       security:
-        - bearerAuth: [ ]
+        - bearerAuth: []
       requestBody:
         description: Comment creation payload
         content:
@@ -507,7 +507,7 @@ paths:
       description: Get a list of all comments on a post.
       operationId: getAllComments
       security:
-        - bearerAuth: [ ]
+        - bearerAuth: []
       responses:
         '200':
           description: A list of comments
@@ -716,17 +716,7 @@ components:
               items:
                 type: object
                 properties:
-                  id:
-                    type: integer
-                  content:
-                    type: string
-                  createdAt:
-                    type: string
-                    format: string
-                  updatedAt:
-                    type: string
-                    format: string
-                  author:
+                  post:
                     type: object
                     properties:
                       id:
@@ -745,7 +735,6 @@ components:
                         type: string
                       profileImageUrl:
                         type: string
-    
     CreatedUser:
       type: object
       properties:
@@ -822,12 +811,12 @@ components:
       properties:
         status:
           type: string
-          example: "fail"
+          example: 'fail'
         data:
           properties:
             authorization:
               type: string
-              example: "You are not authorized to perform this action"
+              example: 'You are not authorized to perform this action'
 
     Log:
       type: object
